Add addons support
* Fix changelog back button
* few changes in layouts

Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/res/xml/extras_prefs.xml
+++ b/res/xml/extras_prefs.xml
@@ -4,6 +4,13 @@
     <PreferenceCategory
         android:key="extras_category"
         android:title="@string/extras_category_title">
+
+        <Preference
+            android:icon="@drawable/ic_addons"
+            android:key="addons"
+            android:summary="@string/addons_summary"
+            android:title="@string/addons_title" />
+
         <Preference
             android:icon="@drawable/ic_web_icon"
             android:key="website_info"
