--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -129,4 +129,7 @@
     <string name="forum_info_title">Forum</string>
     <string name="forum_info_summary">View forum posts</string>
     <string name="error_open_url">Failed to open URL in browser</string>
+    <string name="addons_title">Add-ons</string>
+    <string name="addons_summary">Useful files</string>
+    <string name="addons_error">Failed to load add-ons list</string>
 </resources>
