--- a/res/layout/activity_updates.xml
+++ b/res/layout/activity_updates.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,6 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupMenuStyle"
             app:titleTextAppearance="@style/ToolbarTitle" />
     </android.support.design.widget.AppBarLayout>
 
@@ -46,7 +48,7 @@
                 android:paddingEnd="10dp"
                 android:paddingBottom="5dp"
                 android:scrollbars="vertical"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
             <FrameLayout
                 android:id="@+id/extras_view"
