--- a/res/layout/layout_item_addon.xml
+++ b/res/layout/layout_item_addon.xml
@@ -40,6 +40,7 @@
                 android:ellipsize="marquee"
                 android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceListItem"
+                android:textColor="?android:textColorPrimary"
                 tool:text="Title"/>
 
             <TextView
