--- a/res/layout/preferences_dialog.xml
+++ b/res/layout/preferences_dialog.xml
@@ -26,6 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:popupTheme="@style/AppTheme.PopupMenuStyle"
             android:entries="@array/menu_auto_updates_check_interval_entries" />
     </LinearLayout>
 
@@ -35,5 +36,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="@string/menu_mobile_data_warning"
+        android:textColor="?android:textColorPrimary"
         android:textSize="16sp" />
 </LinearLayout>
