--- a/res/layout/update_item_view.xml
+++ b/res/layout/update_item_view.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:drawablePadding="8dp"
             android:ellipsize="marquee"
+            android:textColor="?android:textColorPrimary"
             android:marqueeRepeatLimit="marquee_forever"
             android:paddingBottom="8sp"
             android:singleLine="true"
@@ -48,6 +49,7 @@
             android:id="@+id/build_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="?android:textColorPrimary"
             android:maxLines="2"
             android:textSize="14sp"
             tools:text="29 February 2018" />
@@ -71,6 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/progress_bar"
+                android:textColor="?android:textColorPrimary"
                 android:ellipsize="marquee"
                 android:singleLine="true"
                 android:textSize="14sp"
@@ -83,6 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="8sp"
+                android:textColor="?android:textColorPrimary"
                 android:singleLine="true"
                 android:textSize="14sp"
                 tools:text="300 MB"
