--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="theme_primary_dark">#ffe8eaed</color>
     <color name="theme_accent">#ff1a73e8</color>
     <color name="cardview_background">#fff</color>
+    <color name="text_primary">#DE000000</color>
+    <color name="text_secondary">#8A000000</color>
     <color name="design_snackbar_background_color" tools:override="true">#323232</color>
 </resources>
