--- a/res/drawable/ic_progress_bg.xml
+++ b/res/drawable/ic_progress_bg.xml
@@ -17,7 +17,7 @@
         <scale android:scaleWidth="100%">
             <shape>
                 <corners android:radius="50dp" />
-                <solid android:color="@color/google_blue" />
+                <solid android:color="@*android:color/accent_device_default_light" />
             </shape>
         </scale>
     </item>
