--- a/res/layout/activity_updates.xml
+++ b/res/layout/activity_updates.xml
@@ -26,7 +26,7 @@
                     android:layout_height="wrap_content"
                     android:drawableTop="@drawable/ic_warning"
                     android:drawablePadding="15dp"
-                    android:drawableTint="@color/google_blue"
+                    android:drawableTint="@*android:color/accent_device_default_light"
                     android:gravity="center"
                     android:paddingStart="46dp"
                     android:paddingTop="15dp"
