--- a/res/layout/extras_fragment.xml
+++ b/res/layout/extras_fragment.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/maintainers"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical">
+        </LinearLayout>
 
         <com.aospextended.ota.ExtraCardView
             android:id="@+id/donate_card"
