--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,9 +2,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <color name="theme_primary">#fff8f9fa</color>
     <color name="theme_primary_dark">#ffe8eaed</color>
-    <color name="theme_accent">#000000</color>
+    <color name="theme_accent">@*android:color/accent_device_default_light</color>
     <color name="theme_bottom_appbar">#EEFFFFFF</color>
-    <color name="google_blue">#ff1a73e8</color>
     <color name="cardview_background">#fff</color>
     <color name="text_primary">#DE000000</color>
     <color name="raised_button_color_disabled">#ff616161</color>
