Update: Add support for local installation
Signed-off-by: Shubham Singh <coolsks94@gmail.com>
Change-Id: I2b6ab68bc222c518bf1783eb75ba384521dd2372

--- a/res/layout/activity_updates.xml
+++ b/res/layout/activity_updates.xml
@@ -64,6 +64,7 @@
             android:layout_gravity="bottom"
             android:background="@color/theme_bottom_appbar"
             android:theme="@style/ToolbarMenuTheme"
+            app:menu="@menu/menu_toolbar"
             app:navigationIcon="@drawable/ic_back" />
 
         <FrameLayout
