--- a/res/menu/menu_toolbar.xml
+++ b/res/menu/menu_toolbar.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/menu_local_installation"
+        android:icon="@drawable/ic_local_installation"
+        android:title="@string/menu_local_installation"
+        app:showAsAction="always"
+        />
+
 </menu>
