--- a/res/layout/extras_fragment.xml
+++ b/res/layout/extras_fragment.xml
@@ -20,7 +20,7 @@
             android:foreground="?attr/selectableItemBackground"
             android:visibility="gone"
             app:cardBackgroundColor="@color/cardview_background"
-            app:cardCornerRadius="16dp"
+            app:cardCornerRadius="@dimen/card_round_corner"
             app:cardElevation="2dp"
             app:contentPaddingBottom="16dp"
             app:contentPaddingLeft="16dp"
