[DNM]Updates: Adapt colors and drawables to android-12 style
Signed-off-by: sb6596 <shubhamprince111@gmail.com>

--- a/res/layout/update_item_view.xml
+++ b/res/layout/update_item_view.xml
@@ -47,8 +47,7 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_system_update"
-                android:tint="@*android:color/accent_device_default_light" />
+                android:src="@drawable/ic_system_update"/>
 
             <TextView
                 android:layout_width="wrap_content"
