--- a/res/layout/activity_local_installation.xml
+++ b/res/layout/activity_local_installation.xml
@@ -49,8 +49,8 @@ android:background="@color/theme_primary">
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
     android:layout_gravity="bottom"
-    android:background="@color/theme_bottom_appbar"
-    android:theme="@style/ToolbarMenuTheme"
+    android:background="@color/theme_bottom_bar"
+    android:theme="?android:attr/actionBarTheme"
     app:navigationIcon="@drawable/ic_back" />
 
 <FrameLayout
