--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="theme_primary">@*android:color/primary_device_default_settings</color>
-    <color name="theme_primary_dark">@*android:color/primary_device_default_settings</color>
+    <color name="theme_primary">@*android:color/system_neutral1_900</color>
+    <color name="theme_primary_dark">@*android:color/system_neutral1_900</color>
     <color name="theme_accent">@*android:color/accent_device_default_dark</color>
-    <color name="theme_bottom_appbar">@*android:color/primary_device_default_settings</color>
-    <color name="cardview_background">@*android:color/secondary_device_default_settings</color>
+    <color name="cardview_background">@*android:color/surface_variant_dark</color>
+    <color name="theme_bottom_bar">@*android:color/surface_variant_dark</color>
     <color name="text_primary">#DEffffff</color>
     <color name="theme_accent_extra_section">#ffffff</color>
 </resources>
