--- a/res/values-night/styles.xml
+++ b/res/values-night/styles.xml
@@ -6,6 +6,6 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@color/theme_primary</item>
-        <item name="android:navigationBarColor">@color/theme_primary</item>
+        <item name="android:navigationBarColor">@color/theme_bottom_bar</item>
     </style>
 </resources>
