--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="theme_primary">#fff8f9fa</color>
-    <color name="theme_primary_dark">#ffe8eaed</color>
+    <color name="theme_primary">@*android:color/primary_device_default_light</color>
+    <color name="theme_primary_dark">@*android:color/primary_device_default_light</color>
     <color name="theme_accent">@*android:color/accent_device_default_light</color>
-    <color name="theme_bottom_appbar">#EEFFFFFF</color>
-    <color name="cardview_background">#fff</color>
+    <color name="theme_bottom_appbar">@*android:color/surface_highlight_light</color>
+    <color name="cardview_background">@*android:color/surface_highlight_light</color>
     <color name="text_primary">#DE000000</color>
     <color name="raised_button_color_disabled">#ff616161</color>
     <color name="theme_accent_extra_section">#ff616161</color>
-    <color name="design_snackbar_background_color" tools:override="true">@color/theme_primary
-    </color>
+    <color name="design_snackbar_background_color" tools:override="true">@color/theme_primary</color>
 </resources>
