--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorControlNormal">@color/text_primary</item>
         <item name="android:windowLightStatusBar">@bool/theme_is_light</item>
         <item name="android:windowLightNavigationBar">@bool/theme_is_light</item>
+        <item name="android:windowBackground">@color/theme_primary</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -15,7 +16,7 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@color/theme_bottom_appbar</item>
     </style>
 
     <style name="AppTheme.PopupMenuOverlapAnchor">
@@ -35,7 +36,7 @@
     </style>
 
     <style name="AppTheme.AlertDialogStyle" parent="android:Theme.DeviceDefault.Light.Dialog.Alert">
-        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorAccent">@color/theme_accent</item>
         <item name="android:buttonBarButtonStyle">@style/AlertDialogButtonStyle</item>
         <item name="android:textColor">@color/text_primary</item>
         <item name="android:textColorPrimary">@color/text_primary</item>
@@ -46,7 +47,7 @@
     </style>
 
     <style name="AlertDialogButtonStyle" parent="android:Widget.DeviceDefault.Button.Borderless.Colored">
-        <item name="android:textColor">@*android:color/accent_device_default_light</item>
+        <item name="android:textColor">@color/theme_accent</item>
         <item name="android:minWidth">64dp</item>
         <item name="android:minHeight">48dip</item>
     </style>
